[package]
name = "therd_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
hmac = "0.11"
sha2 = "0.9"
base64 = "0.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"